--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^11.9.0",
     "framer-motion": "^12.15.0",
     "mercadopago": "^2.7.0",
     "next": "^15.3.3",
