--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.15.0",
     "mercadopago": "^2.7.0",
@@ -28,6 +29,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8.5.5",
+    "prisma": "^6.9.0",
     "tailwindcss": "^4.1.10",
     "typescript": "^5"
   }
