--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.9.0",
     "@tsparticles/react": "^3.0.0",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.525.0",
     "mercadopago": "^2.7.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
