--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "@tsparticles/react": "^3.0.0",
+    "expo": "^53.0.17",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.525.0",
     "mercadopago": "^2.7.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-reanimated": "^3.18.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.8.1",
     "tsparticles-engine": "^2.12.0"
