Atualizações finais para deploy

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^6.9.0",
+    "@mercadopago/sdk-react": "^1.0.3",
+    "@prisma/client": "^6.11.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
@@ -19,7 +20,7 @@
     "expo": "^53.0.17",
     "framer-motion": "^12.15.0",
     "lucide-react": "^0.525.0",
-    "mercadopago": "^2.7.0",
+    "mercadopago": "^1.5.17",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.10",
+    "@types/mercadopago": "^1.5.11",
     "@types/node": "^20",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
@@ -42,7 +44,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8.5.5",
-    "prisma": "^6.9.0",
+    "prisma": "^6.11.1",
     "tailwindcss": "^4.1.10",
     "typescript": "^5"
   }
